ui change:  fix when hi username is distorted

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -120,7 +120,7 @@ header {
 }
 
 .acc-menu{
-  display: inline;
+  width: 150px;
 }
 
  .auth-menu{
@@ -369,6 +369,10 @@ header {
 
      .auth-menu{
       display: block;
+    }
+
+    .acc-menu{
+      width: inherit;
     }
 }
 
